--- a/GouGou-Live/Classes/Messages/Views/MessageListCell.xib
+++ b/GouGou-Live/Classes/Messages/Views/MessageListCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1912" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -28,19 +28,6 @@
                         <color key="textColor" red="1" green="0.65490196079999996" blue="0.16078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wLM-at-KyR">
-                        <rect key="frame" x="102" y="7" width="36" height="27"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <state key="normal" title="未关注">
-                            <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                        </state>
-                        <state key="selected" title="已关注">
-                            <color key="titleColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                        </state>
-                        <state key="highlighted">
-                            <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                        </state>
-                    </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsg-tV-Mik">
                         <rect key="frame" x="295" y="38" width="15" height="15"/>
                         <color key="backgroundColor" red="1" green="0.63137254899999995" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
@@ -89,11 +76,16 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="已关注" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="84w-PU-Pu8">
+                        <rect key="frame" x="100" y="10" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="wLM-at-KyR" firstAttribute="leading" secondItem="rrM-2b-Tqu" secondAttribute="trailing" constant="10" id="5cM-7R-fMa"/>
-                    <constraint firstItem="wLM-at-KyR" firstAttribute="centerY" secondItem="rrM-2b-Tqu" secondAttribute="centerY" id="6VB-Mb-1Pj"/>
                     <constraint firstItem="kET-yO-54R" firstAttribute="top" secondItem="fH1-uC-P9d" secondAttribute="centerY" constant="5" id="8m4-nk-uNv"/>
+                    <constraint firstItem="84w-PU-Pu8" firstAttribute="leading" secondItem="rrM-2b-Tqu" secondAttribute="trailing" constant="10" id="CeQ-qe-kld"/>
                     <constraint firstAttribute="bottom" secondItem="gvL-4E-Xas" secondAttribute="bottom" id="UgH-zs-9RP"/>
                     <constraint firstAttribute="trailing" secondItem="xHi-sT-0TG" secondAttribute="trailing" constant="10" id="b4X-cc-3YU"/>
                     <constraint firstItem="fH1-uC-P9d" firstAttribute="centerY" secondItem="RtH-lJ-sHv" secondAttribute="centerY" constant="-5" id="bau-Ue-BKg"/>
@@ -101,6 +93,7 @@
                     <constraint firstItem="gvL-4E-Xas" firstAttribute="leading" secondItem="RtH-lJ-sHv" secondAttribute="leading" id="bln-Te-0mC"/>
                     <constraint firstItem="rrM-2b-Tqu" firstAttribute="bottom" secondItem="fH1-uC-P9d" secondAttribute="centerY" constant="-3" id="gzY-TD-9Zy"/>
                     <constraint firstItem="fH1-uC-P9d" firstAttribute="centerX" secondItem="RtH-lJ-sHv" secondAttribute="centerX" id="jkH-RB-wsI"/>
+                    <constraint firstItem="84w-PU-Pu8" firstAttribute="centerY" secondItem="rrM-2b-Tqu" secondAttribute="centerY" id="laI-I4-WOj"/>
                     <constraint firstItem="kET-yO-54R" firstAttribute="leading" secondItem="fH1-uC-P9d" secondAttribute="trailing" constant="10" id="ovC-Dx-r4w"/>
                     <constraint firstItem="hsg-tV-Mik" firstAttribute="leading" secondItem="kET-yO-54R" secondAttribute="trailing" constant="10" id="qdv-PX-End"/>
                     <constraint firstItem="xHi-sT-0TG" firstAttribute="centerY" secondItem="rrM-2b-Tqu" secondAttribute="centerY" id="qw1-0H-QbF"/>
@@ -117,13 +110,13 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="iconView" destination="fH1-uC-P9d" id="VkR-Pt-GMf"/>
-                <outlet property="isFocus" destination="wLM-at-KyR" id="NJZ-4z-k5n"/>
+                <outlet property="isFocus" destination="84w-PU-Pu8" id="mJR-H3-TNK"/>
                 <outlet property="lastMessageLabel" destination="kET-yO-54R" id="jgM-oS-PBr"/>
                 <outlet property="lastTimeLabel" destination="xHi-sT-0TG" id="PtL-xe-Lmm"/>
                 <outlet property="nickNameLabel" destination="rrM-2b-Tqu" id="lud-ah-oFM"/>
                 <outlet property="unreadCountLabel" destination="hsg-tV-Mik" id="Ef0-9D-Op5"/>
             </connections>
-            <point key="canvasLocation" x="251" y="115.5"/>
+            <point key="canvasLocation" x="176" y="115.5"/>
         </tableViewCell>
     </objects>
     <resources>
