--- a/GouGou-Live/Classes/Login/Controllers/Registe/SurePsdViewController.xib
+++ b/GouGou-Live/Classes/Login/Controllers/Registe/SurePsdViewController.xib
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1912" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SurePsdViewController">
@@ -32,7 +32,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="新密码   请输入6-20位数字或者字母" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="pi8-LJ-Zjq">
-                    <rect key="frame" x="65" y="20" width="246" height="30"/>
+                    <rect key="frame" x="65" y="20" width="245.5" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="fvO-AD-y4f"/>
                     </constraints>
@@ -40,12 +40,12 @@
                     <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="确认密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="K0U-6I-tVQ">
-                    <rect key="frame" x="65" y="71" width="246" height="30"/>
+                    <rect key="frame" x="65" y="71" width="245.5" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Exo-Wo-aEH">
-                    <rect key="frame" x="28" y="60" width="283" height="1"/>
+                    <rect key="frame" x="28" y="60" width="282.5" height="1"/>
                     <color key="backgroundColor" white="0.80921052630000001" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="YzH-qu-xiJ"/>
@@ -63,7 +63,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pGb-F4-MeV">
-                    <rect key="frame" x="28" y="111" width="283" height="1"/>
+                    <rect key="frame" x="28" y="111" width="282.5" height="1"/>
                     <color key="backgroundColor" white="0.80008737659999996" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="EQo-Qz-Ftu"/>
@@ -73,10 +73,9 @@
                     <rect key="frame" x="28" y="77" width="16" height="18"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QEu-3h-Qnx">
-                    <rect key="frame" x="28" y="152" width="320" height="40"/>
+                    <rect key="frame" x="40" y="152" width="296" height="40"/>
                     <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="320" id="GfC-xe-2Jv"/>
                         <constraint firstAttribute="height" constant="40" id="oM2-Oa-Cf1"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -97,6 +96,7 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Exo-Wo-aEH" firstAttribute="leading" secondItem="U0p-Cj-CFo" secondAttribute="leading" id="1CA-46-iXu"/>
+                <constraint firstItem="QEu-3h-Qnx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="40" id="3r7-Br-Osl"/>
                 <constraint firstItem="djM-rB-WBa" firstAttribute="leading" secondItem="U0p-Cj-CFo" secondAttribute="trailing" constant="10" id="3rM-7F-epD"/>
                 <constraint firstItem="K0U-6I-tVQ" firstAttribute="leading" secondItem="faf-JR-isw" secondAttribute="trailing" constant="10" id="7Pl-Ml-un9"/>
                 <constraint firstItem="djM-rB-WBa" firstAttribute="centerY" secondItem="pi8-LJ-Zjq" secondAttribute="centerY" id="Aen-N8-akr"/>
