--- a/GouGou-Live/Classes/Me/Views/MySelfView/MyMessage/ManagePictureaCell.xib
+++ b/GouGou-Live/Classes/Me/Views/MySelfView/MyMessage/ManagePictureaCell.xib
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -59,6 +59,6 @@
     <resources>
         <image name="圆角-对勾" width="22" height="22"/>
         <image name="椭圆-2" width="25" height="25"/>
-        <image name="组-7" width="99" height="92"/>
+        <image name="组-7" width="150" height="150"/>
     </resources>
 </document>
