--- a/GouGou-Live/Classes/Me/Views/MySelfView/MyMessage/MyFocusTableCell.xib
+++ b/GouGou-Live/Classes/Me/Views/MySelfView/MyMessage/MyFocusTableCell.xib
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1912" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -13,7 +13,7 @@
             <rect key="frame" x="0.0" y="0.0" width="370" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="370" height="74"/>
+                <rect key="frame" x="0.0" y="0.0" width="370" height="74.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="头像" translatesAutoresizingMaskIntoConstraints="NO" id="E15-3H-6sU">
@@ -40,7 +40,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="个性签名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YaT-JS-1QB">
-                        <rect key="frame" x="71" y="38" width="56" height="17"/>
+                        <rect key="frame" x="71" y="38" width="256" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -63,6 +63,7 @@
                     <constraint firstItem="E15-3H-6sU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="47m-3h-dZT"/>
                     <constraint firstAttribute="trailing" secondItem="zLB-vp-TlO" secondAttribute="trailing" id="LkR-Fv-n5E"/>
                     <constraint firstAttribute="trailing" secondItem="lYJ-rB-HpQ" secondAttribute="trailing" id="Nnc-fv-hRQ"/>
+                    <constraint firstItem="zLB-vp-TlO" firstAttribute="leading" secondItem="YaT-JS-1QB" secondAttribute="trailing" constant="3" id="VKq-nA-J9s"/>
                     <constraint firstAttribute="bottom" secondItem="lYJ-rB-HpQ" secondAttribute="bottom" id="Vyg-Xd-ozt"/>
                     <constraint firstItem="lYJ-rB-HpQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="YAs-KJ-UFl"/>
                     <constraint firstItem="YaT-JS-1QB" firstAttribute="leading" secondItem="E15-3H-6sU" secondAttribute="trailing" constant="10" id="agI-K8-Xvj"/>
